--- a/Courseworks/.classpath
+++ b/Courseworks/.classpath
@@ -7,10 +7,14 @@
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libs/cas-client-core-3.1.10.jar"/>
-	<classpathentry kind="lib" path="libs/bcprov-jdk15on-150.jar"/>
 	<classpathentry kind="lib" path="libs/cas-server-support-pac4j-4.0.0-RC3.jar" sourcepath="libs/cas-server-support-pac4j-4.0.0-RC3-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/Courseworks/libs/cas-server-support-pac4j-4.0.0-RC3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/scribe-1.3.5.jar" sourcepath="libs/scribe-1.3.5-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Courseworks/libs/scribe-1.3.5-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
