--- a/Courseworks/.classpath
+++ b/Courseworks/.classpath
@@ -17,5 +17,7 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/Courseworks/libs/scribe-1.3.5-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/signpost-core-1.2.1.2.jar"/>
+	<classpathentry kind="lib" path="libs/signpost-commonshttp4-1.2.1.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
