--- a/Courseworks/bin/AndroidManifest.xml
+++ b/Courseworks/bin/AndroidManifest.xml
@@ -33,8 +33,8 @@
         <!-- Main activity -->
         <activity
             android:name="com.aisaacroth.courseworks.Main"
-            android:label="@string/app_name" >
-            <intent-filter>
+            android:label="@string/app_name">
+            <!-- <intent-filter>
                 <action android:name="android.intent.action.VIEW" >
                 </action>
 
@@ -45,7 +45,7 @@
 
                 <data android:scheme="main-activity" >
                 </data>
-            </intent-filter>
+            </intent-filter> -->
         </activity>
 
         <!-- Login activity -->
