--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -33,8 +33,10 @@
         <!-- Main activity -->
         <activity
             android:name="com.aisaacroth.courseworks.Main"
-            android:label="@string/app_name">
-            <!-- <intent-filter>
+            android:label="@string/app_name" >
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" >
                 </action>
 
@@ -45,7 +47,8 @@
 
                 <data android:scheme="main-activity" >
                 </data>
-            </intent-filter> -->
+            </intent-filter>
+            -->
         </activity>
 
         <!-- Login activity -->
@@ -60,7 +63,22 @@
             android:name="com.aisaacroth.courseworks.ImplicitGrant"
             android:label="@string/app_name" >
         </activity>
-        
+        <activity
+            android:name="com.aisaacroth.courseworks.CourseView"
+            android:label="@string/title_activity_course_view" >
+        </activity>
+        <activity
+            android:name="com.aisaacroth.courseworks.AnnouncementView"
+            android:label="@string/title_activity_announcement_view" >
+        </activity>
+        <activity
+            android:name="com.aisaacroth.courseworks.CalendarView"
+            android:label="@string/title_activity_calendar_view" >
+        </activity>
+        <activity
+            android:name="com.aisaacroth.courseworks.Settings"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
