--- a/Courseworks/bin/AndroidManifest.xml
+++ b/Courseworks/bin/AndroidManifest.xml
@@ -34,21 +34,6 @@
         <activity
             android:name="com.aisaacroth.courseworks.views.Main"
             android:label="@string/app_name" >
-
-            <!--
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" >
-                </action>
-
-                <category android:name="android.intent.category.DEFAULT" >
-                </category>
-                <category android:name="android.intent.category.BROWSABLE" >
-                </category>
-
-                <data android:scheme="main-activity" >
-                </data>
-            </intent-filter>
-            -->
         </activity>
 
         <!-- Login activity -->
@@ -63,18 +48,26 @@
             android:name="com.aisaacroth.courseworks.auth.ImplicitGrant"
             android:label="@string/app_name" >
         </activity>
+
+        <!-- CourseView activity -->
         <activity
             android:name="com.aisaacroth.courseworks.views.CourseView"
             android:label="@string/title_activity_course_view" >
         </activity>
+
+        <!-- AnnouncementView activity -->
         <activity
             android:name="com.aisaacroth.courseworks.views.AnnouncementView"
             android:label="@string/title_activity_announcement_view" >
         </activity>
+
+        <!-- CalendarView activity -->
         <activity
             android:name="com.aisaacroth.courseworks.views.CalendarView"
             android:label="@string/title_activity_calendar_view" >
         </activity>
+
+        <!-- Settings activity -->
         <activity
             android:name="com.aisaacroth.courseworks.views.Settings"
             android:label="@string/title_activity_settings" >
