--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -33,7 +33,8 @@
         <!-- Main activity -->
         <activity
             android:name="com.aisaacroth.courseworks.views.Main"
-            android:label="@string/app_name" >
+            android:label="@string/home_page" 
+            android:theme="@style/Theme.AppCompat.Light" >
         </activity>
 
         <!-- Login activity -->
@@ -53,21 +54,21 @@
         <activity
             android:name="com.aisaacroth.courseworks.views.CourseView"
             android:label="@string/title_activity_course_view"
-            android:theme="@style/Theme.AppCompat" >
+            android:theme="@style/Theme.AppCompat.Light" >
         </activity>
 
         <!-- AnnouncementView activity -->
         <activity
             android:name="com.aisaacroth.courseworks.views.AnnouncementView"
             android:label="@string/title_activity_announcement_view" 
-            android:theme="@style/Theme.AppCompat">
+            android:theme="@style/Theme.AppCompat.Light">
         </activity>
 
         <!-- CalendarView activity -->
         <activity
             android:name="com.aisaacroth.courseworks.views.CalendarView"
             android:label="@string/title_activity_calendar_view"
-            android:theme="@style/Theme.AppCompat" >
+            android:theme="@style/Theme.AppCompat.Light" >
         </activity>
 
         <!-- Settings activity -->
