--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <!-- Main activity -->
         <activity
             android:name="com.aisaacroth.courseworks.views.Main"
-            android:label="@string/home_page" 
+            android:label="@string/home_page"
             android:theme="@style/Theme.AppCompat.Light" >
         </activity>
 
@@ -54,6 +54,24 @@
         <activity
             android:name="com.aisaacroth.courseworks.views.Settings"
             android:label="@string/title_activity_settings" >
+        </activity>
+        
+        <!-- CourseView Activity -->
+        <activity
+            android:name="com.aisaacroth.courseworks.views.CourseView"
+            android:label="@string/title_activity_course_view" >
+        </activity>
+        
+        <!-- CalendarView Activity -->
+        <activity
+            android:name="com.aisaacroth.courseworks.views.CalendarView"
+            android:label="@string/title_activity_calendar_view" >
+        </activity>
+        
+        <!-- AnnouncementView Activity -->
+        <activity
+            android:name="com.aisaacroth.courseworks.views.AnnouncementView"
+            android:label="@string/title_activity_announcement_view" >
         </activity>
     </application>
 
