--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -17,6 +17,56 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
+        <!-- AnnouncementView Activity -->
+        <activity
+            android:name="com.aisaacroth.courseworks.views.AnnouncementView"
+            android:label="@string/title_activity_announcement_view" >
+        </activity>
+
+        <!-- CalendarView Activity -->
+        <activity
+            android:name="com.aisaacroth.courseworks.views.CalendarView"
+            android:label="@string/title_activity_calendar_view" >
+        </activity>
+
+        <!-- CourseView Activity -->
+        <!--
+        <activity
+            android:name="com.aisaacroth.courseworks.views.CourseView"
+            android:label="@string/title_activity_course_view" >
+        </activity>
+        -->
+
+
+        <!-- Implicit Grant activity -->
+        <activity
+            android:name="com.aisaacroth.courseworks.auth.ImplicitGrant"
+            android:label="@string/app_name" >
+        </activity>
+
+        <!-- Login activity -->
+        <activity
+            android:name="com.aisaacroth.courseworks.views.Login"
+            android:label="@string/title_activity_login"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
+
+        <!-- Main activity -->
+        <activity
+            android:name="com.aisaacroth.courseworks.views.Main"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light" >
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value="com.aisaacroth.courseworks.SearchResultsActivity" />
+        </activity>
+
+        <!-- Settings activity -->
+        <activity
+            android:name="com.aisaacroth.courseworks.views.Settings"
+            android:label="@string/title_activity_settings" >
+        </activity>
+
         <!-- Splash Screen -->
         <activity
             android:name="com.aisaacroth.courseworks.views.Splash"
@@ -28,50 +78,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Main activity -->
-        <activity
-            android:name="com.aisaacroth.courseworks.views.Main"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light" >
-        </activity>
-
-        <!-- Login activity -->
-        <activity
-            android:name="com.aisaacroth.courseworks.views.Login"
-            android:label="@string/title_activity_login"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
-        </activity>
-
-        <!-- Implicit Grant activity -->
-        <activity
-            android:name="com.aisaacroth.courseworks.auth.ImplicitGrant"
-            android:label="@string/app_name" >
-        </activity>
-
-        <!-- Settings activity -->
-        <activity
-            android:name="com.aisaacroth.courseworks.views.Settings"
-            android:label="@string/title_activity_settings" >
-        </activity>
-        
-        <!-- CourseView Activity -->
-        <!-- <activity
-            android:name="com.aisaacroth.courseworks.views.CourseView"
-            android:label="@string/title_activity_course_view" >
-        </activity> -->
-        
-        <!-- CalendarView Activity -->
-        <activity
-            android:name="com.aisaacroth.courseworks.views.CalendarView"
-            android:label="@string/title_activity_calendar_view" >
-        </activity>
-        
-        <!-- AnnouncementView Activity -->
-        <activity
-            android:name="com.aisaacroth.courseworks.views.AnnouncementView"
-            android:label="@string/title_activity_announcement_view" >
         </activity>
     </application>
 
