Renamed some classes and finally have the login working correctly.

--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -59,7 +59,7 @@
         </activity>
         
         <!-- RestAuth Service -->
-        <service android:name="com.aisaacroth.courseworks.services.RestAuthGrant" >
+        <service android:name="com.aisaacroth.courseworks.services.CASRestAuth" >
         </service>
     </application>
 
