Refactored some packages to better sort their actions. I need to consider design patterns for the information flow.

--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -59,7 +59,7 @@
         </activity>
         
         <!-- RestAuth Service -->
-        <service android:name="com.aisaacroth.courseworks.services.CASRestAuth" >
+        <service android:name="com.aisaacroth.courseworks.services.CASRestAuthenticator" >
         </service>
     </application>
 
