Refactored and reorganized the web services

--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -59,7 +59,7 @@
         </activity>
         
         <!-- RestAuth Service -->
-        <service android:name="com.aisaacroth.courseworks.web.ExpirationTimer" >
+        <service android:name="com.aisaacroth.courseworks.utils.ExpirationTimer" >
         </service>
     </application>
 
