--- a/Courseworks/bin/AndroidManifest.xml
+++ b/Courseworks/bin/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity
             android:name="com.aisaacroth.courseworks.views.Login"
             android:label="@string/title_activity_login"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
+            android:windowSoftInputMode="adjustResize|stateVisible" 
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar">
         </activity>
 
         <!-- Main activity -->
@@ -50,7 +51,7 @@
             android:name="com.aisaacroth.courseworks.views.Splash"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar" >
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
