23: Implement Katy's Designs for Announcement Activity
Task-Url:
https://github.com/aisaacroth/CourseWorksAndroid/issues/issue/23 Have a
framework up. Not going to clean it up till Katy sends over the new
drafts.

--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -70,7 +70,8 @@
         </activity>
         <activity
             android:name="com.aisaacroth.courseworks.views.AnnouncementView"
-            android:label="@string/title_activity_announcement_view" >
+            android:label="@string/title_activity_announcement_view"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         </activity>
     </application>
 
