24: Implement Katy's Designs for AnnouncementListView
Task-Url:
https://github.com/aisaacroth/CourseWorksAndroid/issues/issue/24 Almost
done with all the design stuff. God, it's this action bar which is
holding me up.

--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -12,8 +12,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/courseworks_logo_login"
-        android:theme="@style/AppTheme" >
+        android:icon="@drawable/pixel"
+        android:theme="@android:color/transparent">
 
         <!-- AnnouncementList Activity -->
         <activity
@@ -65,7 +65,7 @@
             </intent-filter>
         </activity>
 
-        <!-- RestAuth Service -->
+        <!-- Expiration Timer Service -->
         <service android:name="com.aisaacroth.courseworks.utils.ExpirationTimer" >
         </service>
 
