34: Design The Course List View Activity
Task-Url:
https://github.com/aisaacroth/CourseWorksAndroid/issues/issue/34
Designed it out for the most part. Onto the actually parsing the data
in.

--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -79,7 +79,7 @@
             android:label="@string/title_activity_past_course_list_view" >
         </activity>
         <activity
-            android:name="edu.columbia.cuit.courseworks.CurrentCourseListView"
+            android:name="edu.columbia.cuit.courseworks.views.CourseListView"
             android:label="@string/title_activity_current_course_list_view" >
         </activity>
         <activity
